--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@
             --muted: #a0a0a0;
         }
 
+        /* Subtle Background Gradient */
         body {
             font-family: 'Inter', sans-serif;
             background: linear-gradient(135deg, var(--darker) 0%, #1a1a2e 25%, #2d1b69 50%, #1a1a2e 75%, var(--darker) 100%);
+            background-size: 200% 200%;
+            animation: gradientShift 30s ease infinite;
             color: #ffffff;
             overflow-x: hidden;
             line-height: 1.6;
             scroll-behavior: smooth;
+        }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .container {
@@ -50,6 +59,122 @@
             z-index: 1000;
             border-bottom: 1px solid var(--border);
             transition: all 0.3s ease;
+            overflow: hidden;
+        }
+
+        /* Header XRP Coins */
+        .header-coin {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: linear-gradient(45deg, var(--primary), var(--light-primary));
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            color: black;
+            font-size: 8px;
+            opacity: 0.4;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .header-coin::after {
+            content: 'XRP';
+        }
+
+        .header-coin-1 {
+            top: 15px;
+            left: 15%;
+            animation: headerFloat1 8s ease-in-out infinite;
+            animation-delay: 1s;
+        }
+
+        .header-coin-2 {
+            top: 10px;
+            right: 20%;
+            animation: headerFloat2 6s ease-in-out infinite;
+            animation-delay: 3s;
+        }
+
+        .header-coin-3 {
+            top: 25px;
+            left: 60%;
+            animation: headerFloat1 10s ease-in-out infinite;
+            animation-delay: 5s;
+        }
+
+        @keyframes headerFloat1 {
+            0%, 100% { 
+                transform: translateY(0px) translateX(0px) rotate(0deg);
+                opacity: 0.4;
+            }
+            50% { 
+                transform: translateY(-8px) translateX(10px) rotate(180deg);
+                opacity: 0.6;
+            }
+        }
+
+        @keyframes headerFloat2 {
+            0%, 100% { 
+                transform: translateY(0px) translateX(0px) rotate(0deg);
+                opacity: 0.4;
+            }
+            50% { 
+                transform: translateY(-6px) translateX(-8px) rotate(-180deg);
+                opacity: 0.6;
+            }
+        }
+
+        /* Header Particle Trail */
+        .header-particle {
+            position: absolute;
+            width: 3px;
+            height: 3px;
+            background: var(--primary);
+            border-radius: 50%;
+            opacity: 0.3;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .header-particle-1 {
+            top: 20px;
+            left: 30%;
+            animation: headerParticleFlow 12s linear infinite;
+            animation-delay: 2s;
+        }
+
+        .header-particle-2 {
+            top: 35px;
+            left: 50%;
+            animation: headerParticleFlow 15s linear infinite;
+            animation-delay: 6s;
+        }
+
+        .header-particle-3 {
+            top: 15px;
+            right: 35%;
+            animation: headerParticleFlow 10s linear infinite;
+            animation-delay: 4s;
+        }
+
+        @keyframes headerParticleFlow {
+            0% {
+                transform: translateX(-20px);
+                opacity: 0;
+            }
+            10% {
+                opacity: 0.3;
+            }
+            90% {
+                opacity: 0.3;
+            }
+            100% {
+                transform: translateX(100px);
+                opacity: 0;
+            }
         }
 
         nav {
@@ -65,6 +190,12 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            animation: logoPulse 6s ease-in-out infinite;
+        }
+
+        @keyframes logoPulse {
+            0%, 100% { transform: scale(1); filter: brightness(1); }
+            50% { transform: scale(1.02); filter: brightness(1.1); }
         }
 
         .nav-links {
@@ -174,6 +305,18 @@
             color: var(--primary);
             margin: 32px 0;
             text-shadow: 0 0 40px rgba(0, 212, 255, 0.8);
+            animation: priceGlow 4s ease-in-out infinite alternate;
+        }
+
+        @keyframes priceGlow {
+            0% {
+                text-shadow: 0 0 40px rgba(0, 212, 255, 0.8);
+                transform: scale(1);
+            }
+            100% {
+                text-shadow: 0 0 50px rgba(0, 212, 255, 0.9);
+                transform: scale(1.02);
+            }
         }
 
         .cta-button {
@@ -189,11 +332,31 @@
             margin: 12px 16px;
             transition: all 0.4s ease;
             box-shadow: 0 10px 30px rgba(0, 212, 255, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .cta-button::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.3);
+            transition: width 0.6s, height 0.6s;
+            transform: translate(-50%, -50%);
         }
 
         .cta-button:hover {
             transform: translateY(-4px);
             box-shadow: 0 20px 40px rgba(0, 212, 255, 0.5);
+        }
+
+        .cta-button:hover::before {
+            width: 300px;
+            height: 300px;
         }
 
         /* Sections */
@@ -238,6 +401,8 @@
             text-align: center;
             border: 1px solid var(--border);
             transition: all 0.4s ease;
+            position: relative;
+            overflow: hidden;
         }
 
         .mission-card:hover {
@@ -477,12 +642,32 @@
                 margin: 8px auto;
                 max-width: 200px;
             }
+
+            /* Smaller header animations on mobile */
+            .header-coin {
+                width: 15px;
+                height: 15px;
+                font-size: 6px;
+            }
+
+            .header-particle {
+                width: 2px;
+                height: 2px;
+            }
         }
     </style>
 </head>
 <body>
     <!-- Header -->
     <header>
+        <!-- Header XRP Animations -->
+        <div class="header-coin header-coin-1"></div>
+        <div class="header-coin header-coin-2"></div>
+        <div class="header-coin header-coin-3"></div>
+        <div class="header-particle header-particle-1"></div>
+        <div class="header-particle header-particle-2"></div>
+        <div class="header-particle header-particle-3"></div>
+        
         <nav class="container">
             <div class="logo">$DROPIT</div>
             <ul class="nav-links">
